Start of the page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,15 +6,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>%P0M - Magnus site</title>
+    <title>5P0M - Magnus site</title>
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
-    
+    <link rel="stylesheet" heref= "/static/stylesheet.css">
 
 
 </head>
 
 <body> 
-
+    <header>
+        <h1>5P0M - Magnus site</h1>
+    </header>
 
 
 </body>
