try to get it to work

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,10 +14,16 @@
 </head>
 
 <body> 
-    <header>
-        <h1>5P0M - Magnus site</h1>
-    </header>
+    <div>
 
+        <header>
+            <h1>5P0M - Magnus site</h1>
+        </header>
 
+    </div>
+
+    <div>
+        {{ content }}
+    </div>
 </body>
 </html>
