--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>5P0M - Magnus site</title>
-    <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+    
     <link rel="stylesheet" heref= "/static/stylesheet.css">
 
 
@@ -15,9 +15,11 @@
 
 <body> 
     <div>
-
         <header>
-            <h1>5P0M - Magnus site</h1>
+            <nav
+                <h1>5P0M - Magnus site</h1>
+
+            </nav>
         </header>
 
     </div>
