se if style is linked

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,8 @@
 <body> 
     <div>
         <header>
-            <nav
+            <nav>
+                
                 <h1>5P0M - Magnus site</h1>
 
             </nav>
